--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 }
 .homebody
 {
-    background: url('bkimage/bk.jpg') center/cover no-repeat; /* Updated */
+    background: url('bkimage/bk2.jpg') center/cover no-repeat; /* Updated */
 }
 
 .center-header {
